--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "start": "node server.js --conf=/home/conf/config.js"
   },
   "dependencies": {
+    "@dropb/diskinfo": "^2.0.0",
     "base-64": "^0.1.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "cpu": "^1.0.1",
     "express": "^4.17.1",
     "googleapis": "^51.0.0",
+    "influxdb-nodejs": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
     "path": "^0.12.7",
+    "pino": "^6.3.2",
     "plain-config": "^0.1.3",
     "serverless-mysql": "^1.5.4",
     "ua-parser-js": "^0.7.21",
