--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "node server.js --conf=/run/secrets/ssoauth-prod.js",
+    "prod": "node server.js --conf=/run/secrets/ssoauth-prod.js",
+    "stage1": "node server.js --conf=/run/secrets/ssoauth-stage1.js",
     "dev": "node server.js --conf=conf/config-local.js"
   },
   "dependencies": {
