update docker-compose & readme

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,16 +7,14 @@ services:
       - .:/home/app
     external_links:
       - actionmedia
-    expose:
-      - "9080"
+    ports:
+      - 9080
     environment:
       - BRANCH=dev
+      - VIRTUAL_HOST=ssoauth-local.surge.systems
     networks:
       - proxy
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.whoami.rule=Host(`ssoauth.local`)"
-      - "traefik.http.routers.whoami.entrypoints=web"
+      - database
     depends_on:
       - redis
 
@@ -24,6 +22,8 @@ services:
     image: redis:latest
 
 networks:
+  database:
+    external: true
   proxy:
     external: true
   default:
